--- a/style.css
+++ b/style.css
@@ -1,7 +1,88 @@
-#heading{
-    color: dodgerblue;
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-around;
 }
 
-#perent{
-    color: dodgerblue;
+.logo {
+    width: 100px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.nav-items ul {
+    display: flex;
+    font-size: 18px;
+    list-style-type: none;
+    padding-right: 50px;
+}
+
+.nav-items li{
+    padding: 15px;
+    margin: 10px;
+}
+
+.nav-items li:hover{
+    color: rgb(243, 98, 7);
+    transition: color 0.5s;
+    cursor: pointer;
+}
+
+
+/* Body */
+.search{
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.search-input{
+    padding:10px;
+    width:50%;
+    border-radius: 15px;
+}
+
+.res-card {
+    width: 300px;
+    margin: 70px;
+    margin-bottom: 23px;
+    color: #010101;
+    background:#fff;
+    border-radius: 15px;
+    border: 1px solid orangered;
+
+}
+.res-card h3{
+    margin: 10px;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card img{
+    border: none;
+    border-radius: 15px;
+    width: 100%;
+    padding-top: 0;
+    
+}
+
+.card-rating{
+    margin:5px;
+}
+
+.res-card:hover{
+    transform: scale(1.1);
+    transition: transform 0.6s ease-out;
+    cursor: pointer;
+    opacity: 1;
+}
+
+/* Footer */
+
+.footer{
+    background: orangered;
+    padding: 10px;
 }
