--- a/style.css
+++ b/style.css
@@ -56,17 +56,16 @@
     color: #010101;
     background:#fff;
     border-radius: 15px;
-    border: 1px solid orangered;
     transition: 0.7s;
-    box-shadow: 7px 10px 3px rgb(173, 154, 144);
 }
 
 .res-card:hover{
-    box-shadow: 10px 7px 7px rgb(110, 104, 100);
+    transition: 0.7s 0.5;
 }
 
 .res-card h3{
-    margin: 10px;
+    margin: 5px;
+    margin-top: 20px;
 }
 
 .res-container{
@@ -78,12 +77,9 @@
     border: none;
     border-radius: 15px;
     width: 100%;
+    height: 50%;
     padding-top: 0;
     
-}
-
-.card-rating{
-    margin:5px;
 }
 
 .res-card:hover{
