--- a/style.css
+++ b/style.css
@@ -51,12 +51,13 @@
 
 .res-card {
     width: 300px;
+    height: 50%;
     margin: 70px;
-    margin-bottom: 23px;
+    margin-bottom: 50px;
     color: #010101;
     background:#fff;
-    border-radius: 15px;
     transition: 0.7s;
+    border-radius: 20px;
 }
 
 .res-card:hover{
@@ -64,7 +65,6 @@
 }
 
 .res-card h3{
-    margin: 5px;
     margin-top: 20px;
 }
 
@@ -77,7 +77,7 @@
     border: none;
     border-radius: 15px;
     width: 100%;
-    height: 50%;
+    height: 240px;
     padding-top: 0;
     
 }
@@ -89,6 +89,8 @@
     opacity: 1;
 }
 
+.card-rating{
+}
 /* Footer */
 
 .footer{
