--- a/style.css
+++ b/style.css
@@ -50,12 +50,12 @@
 }
 
 .res-card {
-    width: 300px;
+    width: 200px;
     height: 50%;
     margin: 70px;
     margin-bottom: 50px;
     color: #010101;
-    background:#fff;
+    background:#ffffff;
     transition: 0.7s;
     border-radius: 20px;
 }
@@ -65,7 +65,9 @@
 }
 
 .res-card h3{
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 15px;
+
 }
 
 .res-container{
@@ -77,19 +79,21 @@
     border: none;
     border-radius: 15px;
     width: 100%;
-    height: 240px;
+    height: 200px;
     padding-top: 0;
     
 }
 
 .res-card:hover{
-    transform: scale(1.1);
-    transition: transform 0.6s ease-out;
+    transform: scale(0.9);
+    transition: transform 0.6s ease-in-out;
     cursor: pointer;
     opacity: 1;
 }
 
 .card-rating{
+     
+    margin-left: 15px;
 }
 /* Footer */
 
