--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@
 
 .search-input{
     padding:10px;
-    width:50%;
+    width:500px;
     border-radius: 15px;
+    
 }
 .filter-btn{
     padding: 10px;
@@ -59,6 +60,18 @@
     background: orangered;
     color: #fff;
     cursor: pointer;
+}
+
+.filter{
+    display: flex;
+    justify-content: center;
+}
+
+
+.filtered{
+    display: flex;
+    justify-content: center;
+    
 }
 
 .res-card {
@@ -142,7 +155,15 @@
 
 .shimmer-info{
     margin-top: 10px;
-    width: 160px;
+    width: 200px;
+    height: 13px;
+    background: #f0f0f0;
+    border-radius: 20px;
+}
+
+.shimmer-order{
+    margin-top: 10px;
+    width:55px;
     height: 13px;
     background: #f0f0f0;
     border-radius: 20px;
