--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@
 .nav-items li{
     padding: 15px;
     margin: 10px;
+    color: #010101;
+    
 }
 
 .nav-items li:hover{
@@ -167,4 +169,29 @@
     height: 13px;
     background: #f0f0f0;
     border-radius: 20px;
+}
+
+/* About */
+
+.about-cart {
+    box-sizing: border-box;
+    width:100%;
+    margin-left: 20px;
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 20px;
+}
+.about-heading{
+    padding-left: 20px;
+    color: rgb(44, 43, 43);
+    display: flex;
+    justify-content: center;
+}
+.about-cart h2 {
+    color: aqua;
+}
+
+.about-cart h3 {
+    color: rgb(94, 93, 91);
+    margin-left: 27px;
 }
