--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* Header */
 .header {
     display: flex;
@@ -21,7 +25,6 @@
 .nav-items li{
     padding: 15px;
     margin: 10px;
-    color: #010101;
     
 }
 
@@ -79,7 +82,7 @@
 .res-card {
     width: 200px;
     height: 50%;
-    margin: 70px;
+    margin: 30px;
     margin-bottom: 50px;
     color: #010101;
     background:#ffffff;
@@ -100,6 +103,7 @@
 .res-container{
     display: flex;
     flex-wrap: wrap;
+    margin-left: 60px;
 }
 
 .res-card img{
@@ -129,7 +133,7 @@
     padding: 10px;
 }
 
-/* Shimmer UI */
+/* Shimmer UI - restaurant card */
 
 .shimmer-container{
     display: flex;
@@ -170,6 +174,23 @@
     background: #f0f0f0;
     border-radius: 20px;
 }
+
+/* restaurant menu */
+
+.menu { 
+    box-sizing: border-box;
+    border-radius: 20px;
+    border: 1px solid black;
+    width: 50%;
+    margin-left: 22%;
+    margin-bottom: 20px;
+    padding: 10px;   
+}
+/* Shimmer UI - restaurant menu*/
+.menu h1{
+    
+}
+
 
 /* About */
 
